--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100%;
+  margin: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+  background-color: white;
+}
+body {
+  margin: 0;
+  font-family: Josefin Sans;
+  font-weight: bold;
+}
+
+a {
+  color: #000;
+}
+/* 
+.detail-button {
   color: white;
-}
+  background-color: rgb(135, 185, 196);
+  max-width: 50%;
+  font-family: Josefin Sans;
+  font-size: 1rem;
+  padding: 0.5rem;
+  align-self: center;
+} */
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-to-cart-btn {
+  cursor: pointer;
+  background-color: teal;
+  border: none;
+  color: white;
+  padding: 10px;
+  max-width: 200px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 0 auto;
 }
